--- a/bot_with_memory.ipynb
+++ b/bot_with_memory.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "e1078df7",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
     "    print(\"You: \",user_input)\n",
     "    response=bot.invoke({\"messages\":[HumanMessage(content=user_input)]},config=thread)\n",
     "\n",
-    "    print(\"Ai: \",response[\"messages\"][-1].content)\n"
+    "    print(\"Ai: \",response[\"messages\"][-1])\n"
    ]
   },
   {
