--- a/bot_with_memory.ipynb
+++ b/bot_with_memory.ipynb
@@ -238,7 +238,7 @@
     "    print(\"You: \",user_input)\n",
     "    response=bot.invoke({\"messages\":[HumanMessage(content=user_input)]},config=thread)\n",
     "\n",
-    "    print(\"Ai: \",response[\"messages\"][-1])\n"
+    "    print(\"Ai: \",response[\"messages\"][-1].content)\n"
    ]
   },
   {
